# spheretree

./: .gitignore  CMakeLists.txt  configure
gui/: spheretree.py
models/: bunny-1500.sph  bunny-1500.sur  bunny-5000.sph  bunny-5000.sur  cow-1500.sur  cow-5000.sph  cow-5000.sur  cup.sph  cup.sur  dragon-1500.sph  dragon-1500.sur  dragon-5000.sph  dragon-5000.sur  lamp600.sph  lamp600.sur  lego.sph  lego.sur  shammy.sph  shammy.sur  snakie.sur  teapot.sph  teapot.sur
src/: EvalTree.cpp  makeTreeGrid.cpp  makeTreeHubbard.cpp  makeTreeMedial.cpp  makeTreeOctree.cpp  makeTreeSpawn.cpp
src/API/: SFRitter.cpp  SFWhite.cpp  SRBase.h  SRBurst.cpp  SRBurst.h  SRComposite.cpp  SRComposite.h  SRExpand.cpp  SRExpand.h  SRGrid.cpp  SRGrid.h  SRMerge.cpp  SRMerge.h  SRQuickBurst.cpp  SRQuickBurst.h  SRSpawn.cpp  SRSpawn.h  SRStandOff.cpp  SRStandOff.h  SRVoronoi.cpp  SRVoronoi.h  STGGeneric.cpp  SurfaceDiv.cpp  VFAdaptive.cpp  VFAdaptive.h
src/API/SFWhite/: ball.h
src/BBox/: eigen.cpp
src/Exceptions/: CheckDebug.h
src/Export/: POV.cpp  POV.h
src/Geometry/: Point2D.cpp  Point2D.h  Sphere.cpp  Sphere.h
src/MedialAxis/: Voronoi3D.cpp
src/MinMax/: Simplex.cpp
src/SphereTree/: SphereTree.cpp  SphereTree.h
src/Storage/: Array.h
src/Surface/: Internal.cpp  InternalGem.cpp  OBJLoader.cpp  Surface.cpp  Surface.h
yml2liggghts/: yaml2liggghts.py
